--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_TYPE=sqlite  # Options: 'sqlite', 'postgresql'
-DATABASE_URL=sqlite:///dev.db  # URL for SQLite or connection string for PostgreSQL
+# DATABASE_URL=sqlite:///dev.db
+ENV = 'development' # Environment
+JWT_SECRET_KEY=your_secret_key
+REPOSITORY=db # Repository
