--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_TYPE=sqlite  # Options: 'sqlite', 'postgresql'
 # DATABASE_URL=sqlite:///dev.db
 ENV = 'development' # Environment
-JWT_SECRET_KEY='u7CCkK-PzGhwvXlm9bYCYxfmSkCMDRkxyvaTayC3ew8'
+JWT_SECRET_KEY='MY SCRET'
 REPOSITORY=db # Repository
